@@ -1,5 +1,9 @@
 2005-11-17  Ales Hakl  <ales at hakl dot net>
 
+	* src/load.c (dfsch_read_scm_*): handle invalid syntax correctly
+
+	* src/dfsch.c (dfsch_list_read): handle invalid syntax correctly
+
 	* src/repl.c (main): Evaluate expression from command line, -i option
 
 	* src/dfsch.c (dfsch_obj_write_exception): Pretty-printing exceptions
